--- a/com.github.KirMozor.Yamux.yaml
+++ b/com.github.KirMozor.Yamux.yaml
@@ -44,8 +44,13 @@ modules:
       - cp -r Svg $FLATPAK_DEST/bin/
       - cp -r bin/Release/net6.0/linux-x64/* $FLATPAK_DEST/bin/
       - install -Dm755 bin/Release/net6.0/linux-x64/Yamux $FLATPAK_DEST/bin/Yamux
+      - install -Dpm644 $FLATPAK_ID.desktop $FLATPAK_DEST/share/applications/$FLATPAK_ID.desktop
+      - install -Dpm644 Svg/icon.svg $FLATPAK_DEST/share/icons/hicolor/scalable/apps/$FLATPAK_ID.svg
     sources:
       - sources.json
       - type: git
         url: https://github.com/KirMozor/Yamux.git
         commit: fff537b64f55a005dc756e40bac58970ff6fb356
+      - type: file
+        path: com.github.KirMozor.Yamux.desktop
+
