feat: Use --socket=fallback-x11

--- a/com.github.KirMozor.Yamux.yaml
+++ b/com.github.KirMozor.Yamux.yaml
@@ -5,7 +5,7 @@ sdk: org.freedesktop.Sdk
 finish-args:
   - --share=network
   - --share=ipc
-  - --socket=x11
+  - --socket=fallback-x11
   - --socket=wayland
   - --own-name=org.KirMozor.Yamux
 
